# dicom-forge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  SECURITY.md  SHOWCASE.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: LANGUAGE-BAR.md  api.md  cli.md  concepts.md  index.md
native/dicom-probe/: CMakeLists.txt  README.md
native/dicom-probe/src/: main.cpp
native/dicom-probe/testing/: check_probe.py  make_series.py
scripts/: gen-readme-i18n.py  install-desktop-icon.ps1  open-docs.ps1
src/dicomforge/: __init__.py  _version.py  cli.py  config.py  convert.py  deidentify.py  exceptions.py  ingest.py  models.py  observability.py  pipeline.py  qc.py  segmentation.py
tests/: conftest.py  test_cli.py  test_convert.py  test_deidentify.py  test_ingest.py  test_pipeline.py  test_qc.py  test_segmentation.py
