[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dicom-anvil"
dynamic = ["version"]
description = "Enterprise-grade medical-imaging pipeline: ingest, de-identify, convert, and QC DICOM for 3D Slicer and ITK-SNAP."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Angela Hudson", email = "angela.hudson.data@gmail.com" }]
keywords = ["dicom", "medical-imaging", "nifti", "nrrd", "3d-slicer", "itk-snap", "deidentification", "radiology"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "License :: Free for non-commercial use",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]
dependencies = [
  "pydicom>=2.4,<4",
  "numpy>=1.24",
  "pydantic>=2.5,<3",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
# Heavy native libraries kept optional so the core stays lightweight and CI-friendly.
convert = ["SimpleITK>=2.3", "pynrrd>=1.0", "nibabel>=5.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[project.urls]
Homepage = "https://github.com/DaCameraGirl/dicom-forge"
Repository = "https://github.com/DaCameraGirl/dicom-forge"
Issues = "https://github.com/DaCameraGirl/dicom-forge/issues"
Changelog = "https://github.com/DaCameraGirl/dicom-forge/blob/main/CHANGELOG.md"

[project.scripts]
dicomforge = "dicomforge.cli:app"

[tool.hatch.version]
path = "src/dicomforge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dicomforge"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=dicomforge --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "requires_convert: test needs the optional 'convert' extra (SimpleITK/pynrrd/nibabel)",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PTH", "RUF"]
ignore = [
  "B008",    # typer uses function calls in argument defaults by design
  "RUF022",  # __all__ is grouped by category on purpose, not isort-sorted
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.10"
packages = ["dicomforge"]
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
